# run-walk-pipeline

./: .flake8  .gitignore  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt  run_walk_constants.py
.github/workflows/: airflow-integration.yml  ci.yml
airflow/: README.md  dag.py
dashboard/: app.py  streamlit_app.py
ingestion/: download_kaggle.py  ingest.py
scripts/: capture_streamlit_screenshot.py  create_sample_parquet.py
tests/: conftest.py  test_airflow_dag_pytest.py  test_config.py  test_config_pytest.py  test_dashboard_app_pytest.py  test_download_kaggle.py  test_download_kaggle_cli_pytest.py  test_download_kaggle_pytest.py  test_ingest_main_pytest.py  test_ingest_pytest.py  test_makefile_ci_pytest.py  test_run_transform_pytest.py  test_run_walk_constants_pytest.py  test_streamlit_smoke_pytest.py  test_transform_sql_pytest.py
transform/: run_transform.py  transform.sql
